[package]
name = "azur_lane_wiki_retrieve_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking", "rustls-tls-native-roots"], default-features = false }
scraper = "0.12.0"
csv = "1.1"
